--- a/css/style.css
+++ b/css/style.css
@@ -556,12 +556,13 @@ h2 {
   .footer-procenter .logo-final-padre {
     display: none;
   }
-  .footer-procenter .nav-redes {
-    font-size: px;
-  }
   .footer-procenter .nav-redes .ul-redes .li-redes .div-redes {
-    width: 15px;
-    height: 15px;
+    width: 30px;
+    height: 30px;
+  }
+  .footer-procenter .nav-redes .ul-redes .li-redes .div-redes .img-redes {
+    width: 100%;
+    height: 100%;
   }
   .footer-procenter .nav-pestanas {
     display: none;
