--- a/scss/components/_miperfil.scss
+++ b/scss/components/_miperfil.scss
@@ -17,7 +17,7 @@
     @extend %img-full;
 }
 
-h1 {
+.titulo-h1 {
     margin-left: 30px;
     text-decoration: underline;
     font-family: 'Times New Roman', Times, serif;
