--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,12 +1,12 @@
 .footer-procenter {
     @include displays (flex, center, space-between);
-    background-color: #85c1e9;
+    background-color: map-get($colores, color3);
     margin-top: 70px;
     padding-left: 10px;
     padding-right: 10px;
     .logo-final-padre{
         border-style: solid;
-        border-color: #85c1e9;
+        border-color: map-get($colores, color3);
         border-radius: 35px;
         width: 110px;
         height:120px;
@@ -25,7 +25,7 @@
                     height: 30px;
                     border-radius: 40px;
                     border-style: solid;
-                    border-color: #85c1e9;
+                    border-color: map-get($colores, color3);
                     overflow: hidden;
                     margin-right: 10px;
                     .img-redes{
@@ -42,9 +42,6 @@
         .ul-pestanas{
             .li-pestanas{
                 list-style: none;
-                // .link-pestanas {
-                    
-                // }
             }
         }
     }
