--- a/css/style.css
+++ b/css/style.css
@@ -537,6 +537,9 @@ h2 {
 }
 /* footer */
 @media (max-width: 1350px) {
+  .footer-procenter {
+    bottom: 0;
+  }
   .footer-procenter .logo-final-padre {
     width: 100px;
     height: 100px;
