--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -145,6 +145,7 @@
     
 @media (max-width:1350px){
     .footer-procenter {
+        bottom: 0;
         .logo-final-padre{
             width: 100px;
             height:100px;
