--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -4,6 +4,7 @@
     margin-top: 70px;
     padding-left: 10px;
     padding-right: 10px;
+    bottom: 0;
     .logo-final-padre{
         border-style: solid;
         border-color: map-get($colores, color3);
